<resources>
    <string name="app_name">CNG</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="mi_choose_device">连接到蓝牙设备…</string>
    <string name="mi_settings">设置</string>

    <string name="title_processing">正在处理，请稍候…</string>
    <string name="title_connecting">正在连接蓝牙设备，请稍候…</string>
    <string name="title_temperature">温度(&#176;C)</string>
    <string name="title_humidity">湿度(%)</string>
    <string name="title_starting">正在启动应用程序…</string>
    <string name="title_first_run">正在为首次启动应用程序检查数据…</string>
    <string name="title_fetch_from_cloud">正在从云服务器下载数据…</string>
    <string name="title_start_service">正在启动后台服务…</string>
    <string name="title_error">错误</string>
    <string name="title_activity_dashboard">仪表盘</string>
    <string name="msg_press_ir_control">请对准接收器按下遥控器按钮</string>
    <string name="msg_press_ir_again">请再按一次遥控器</string>
    <string name="msg_preparing">正在准备，请稍候…</string>

    <string name="label_on">ON</string>
    <string name="label_off">OFF</string>

    <string name="prompt_device_not_found">没有可用的蓝牙设备</string>
    <string name="prompt_relearn">您确定要重新学习吗？\r\n这将清除您上次保存的红外编码</string>

    <string name="label_device_address">蓝牙设备地址</string>
    <string name="label_app_uuid">设备号</string>
    <string name="gv_remote">红外遥控器</string>
    <string name="gv_fan">风机</string>
    <string name="gv_ir">人体红外感应器</string>
    <string name="gv_key">门禁</string>
    <string name="gv_other">无所谓啦</string>

    <string name="btn_ok">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_yes">是</string>
    <string name="btn_no">否</string>
    <string name="btn_bluetooth">蓝牙设备</string>
    <string name="btn_control_panel">控制面板</string>
    <string name="btn_check_upload">检查更新</string>
    <string name="btn_system_config">系统设置</string>
    <string name="btn_learn">学习</string>
    <string name="btn_action">执行</string>
    <string name="btn_re_learn">重新学习</string>

    <string name="no_network">没有可用的网络</string>
    <string name="setup_network_prompt">是否对网络进行设置?</string>
    <string name="tip_confirm_exit">再次按下回退键退出程序</string>

    <string name="err_network_error">网络连接错误</string>
    <string name="err_register_fail">无法在云服务器上注册设备</string>
    <string name="err_init_db_fail">初始化数据库失败</string>
    <string name="err_internal">未知错误</string>
    <string name="err_ir_code_mismatch">这次按键和上次按键不匹配，请从新开始</string>
    <string name="title_activity_ircontrol_panel">IRControlPanelActivity</string>
</resources>
